# thesis-rules-checker

./: Procfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: common-mistake-issue-template.md
thesis_rules_checker/: __init__.py  __main__.py  iterators.py  rules.py  rules_base.py  wrappers.py
thesis_rules_checker_web/: __init__.py
thesis_rules_checker_web/static/: bu_logo.jfif  index.html
