[tool.poetry]
name = "thesis-rules-checker"
version = "0.1.0"
description = "A format checking software for the theses of BOUN grad students"
authors = ["Anxeal <anxealous@gmail.com>", "Ahmet Kudu <ahmetkudu1453@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "thesis_rules_checker"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^2.11.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
thesis-rules-checker = "thesis_rules_checker.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
